--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -1,10 +1,11 @@
-pt_BR:
-  personal_account: Pessoa física
-  business_account: Pessoa jurídica
-  cpf: CPF
-  cnpj: CNPJ
-  company_name: Razão Social
-  state_registry: Inscrição Estadual
+pt-BR:
+  spree:
+    personal_account: Pessoa física
+    business_account: Pessoa jurídica
+    cpf: CPF
+    cnpj: CNPJ
+    company_name: Razão Social
+    state_registry: Inscrição Estadual
   activerecord:
     errors:
       models:
@@ -16,4 +17,3 @@ pt_BR:
             cnpj:
               not_present: não está presente
               wrong_format: inválido
-  
